# dynet-pipeline

dynet-py/: LICENSE  README.md  mkdocs.yml  pyproject.toml
dynet-py/docs/: api.md  cli.md  development.md  faq.md  index.md  installation.md  quickstart.md
dynet-py/docs/tutorials/: basic-workflow.md
dynet-py/examples/: basic_api_example.py
dynet-py/src/dynet_py/: __init__.py  cli.py  core.py
dynet-py/tests/: test_core.py
dynetR/.Rproj.user/BF633DCD/pcs/: windowlayoutstate.pper
dynetR/.Rproj.user/BF633DCD/sources/per/t/: A28BD169  BBA70924  BBA70924-contents
dynetR/.Rproj.user/BF633DCD/sources/prop/: 2823B241  INDEX
dynetR/.Rproj.user/BF633DCD/viewer-cache/: 22FB904F.Rdata
dynetR/.Rproj.user/CADA2A29/pcs/: files-pane.pper  windowlayoutstate.pper
dynetR/.Rproj.user/CADA2A29/sources/prop/: 3034F723  3A48304A  4DBF5941  INDEX
dynetR/.Rproj.user/shared/notebooks/: paths
dynetR/.Rproj.user/shared/notebooks/35866127-n_rewiring/1/s/c3cdpaa72gtho/: 000002.csv
dynetR/.Rproj.user/shared/notebooks/35866127-n_rewiring/1/s/c6ox994meo17k/: 000002.csv
dynetR/.Rproj.user/shared/notebooks/35866127-n_rewiring/1/s/c6t4p47hb4xqk/: 000002.csv
dynetR/.Rproj.user/shared/notebooks/35866127-n_rewiring/1/s/c70p3k90wz0rq/: 000002.csv  000003.csv  000003.metadata  000003.rdf  000005.csv
dynetR/.Rproj.user/shared/notebooks/35866127-n_rewiring/1/s/c99behv2t042z/: 000002.csv
dynetR/.Rproj.user/shared/notebooks/35866127-n_rewiring/1/s/cagg00imlp8xy/: 000002.csv
dynetR/.Rproj.user/shared/notebooks/35866127-n_rewiring/1/s/cay9v9mkxzs4i/: 000002.csv
(+17 files in other folders)
